tests/errors/bool_dunder_return_string.ki
class BadBool:
    var _init_ = Function(self):
        self.x = 1
    var _bool_ = Function(self):
        return "not a bool"

if BadBool():
    discard 0
